--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
     <div class="topnav">
         <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="logo">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="after-school.html">After-School</a></li>
-            <li><a href="index.html">123</a></li>
+        <ul id="navi-items">
+            <li class="navi"><a href="index.html">Home</a></li>
+            <li class="navi"><a href="after-school.html">After School</a></li>
+            <li class="navi"><a href="index.html">Summer School</a></li>
+            <li class="navi"><a href="social-media.html">Social Media</a></li>
         </ul>
     </div>
     <div class="banner container">
@@ -23,6 +24,17 @@
     </div>
     <div class="title container">
         <h1 class="title">TUY Academy</h1>
+    </div>
+    <div class="summary container">
+        <p class="summary paragraph">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+    </div>
+    <div class="services container">
+        <h3 id="service-header">Our Services</h3>
+        <ul>
+            <li>School Pick Up</li>
+            <li>Classes divided by grades K-8</li>
+            <li>Tutoring and Homework Helpers</li>
+        </ul>
     </div>
 </body>
 
