Create about us, gallery, and schedule html and css files

--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
 </head>
 
 <body>
-    <div class="topnav">
-        <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="logo">
-        <ul id="navi-items">
-            <li class="navi"><a href="index.html">Home</a></li>
-            <li class="navi"><a href="after-school.html">After School</a></li>
-            <li class="navi"><a href="index.html">Summer School</a></li>
-            <li class="navi"><a href="social-media.html">Social Media</a></li>
-        </ul>
+    <!-- navigation bar -->
+    <div class="topnav container">
+        <div class="topnav item"><img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="logo"></div>
+        <div class="topnav item"><a href="index.html">Home</a></div>
+        <div class="topnav item"><a href="about-us.html">About Us</a></div>
+        <div class="topnav item"><a href="schedule.html">Schedule</a></div>
+        <div class="topnav item"><a href="gallery.html">Gallery</a></div>
     </div>
+    
     <div class="banner container">
-        <img src="./img/tuy-classtime-candid-4.png" alt="Photo of teacher teaching kids. Credit to TUY Academy" class="banner image">
+        <img src="./img/tuy-classtime-candid-4.png" alt="Photo of teacher teaching kids. Credit to TUY Academy"
+            class="banner image">
     </div>
     <div class="title container">
         <h1 class="title">TUY Academy</h1>
     </div>
     <div class="summary container">
-        <p class="summary paragraph">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+        <p class="summary paragraph">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+            turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu
+            libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
     </div>
     <div class="services container">
         <h3 id="service-header">Our Services</h3>
