--- a/after-school.html
+++ b/after-school.html
@@ -6,31 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TUY Academy</title>
     <link rel="stylesheet" href="./css/tuy_afterschool.css">
-    <link rel="stylesheet" href="./css/tuy_homepage.css">
+    <link rel="stylesheet" href="./css/tuy_global.css">
 </head>
 
 <body>
-    <div class="topnav">
-        <img src="./media/images/TUY_logo.jpg" class="logo">
-        <a href="index.html">Home</a>
-        <a href="after-school.html">After-School</a>
-        <a href="index.html">123</a>
-
+    <div class="topnav container">
+        <div class="topnav item"><img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="logo"></div>
+        <div class="topnav item"><a href="index.html">Home</a></div>
+        <div class="topnav item"><a href="schedule.html">Schedule</a></div>
+        <div class="topnav item"><a href="after-school.html">After School</a></div>
+        <div class="topnav item"><a href="index.html">Summer School</a></div>
+        <div class="topnav item"><a href="social-media.html">Social Media</a></div>
     </div>
-
-    <h1>After School Daily Schedule</h1>
-    <div>
-        <h2 class="schedule-title">Kindergarten</h2>
-        <ul>
-            <li><strong>1:50pm - 2:00pm</strong> Pick Up</li>
-            <li><strong>2:15pm - 3:00pm</strong> Free Time</li>
-            <li><strong>3:30pm - 4:45pm</strong> Homework, Reading, Math, Writing</li>
-            <li><strong>4:45pm - 5:15pm</strong> Break Time</li>
-            <li><strong>5:15pm - 6:00pm</strong> Activities, Stories</li>
-            <li><strong>6:00pm - 6:30pm</strong> Free Time</li>
-        </ul>
+    <div id="after-school-container">
+        <h1>After School Daily Schedule</h1>
+        <div>
+            <h2 class="schedule-title">Kindergarten</h2>
+            <ul>
+                <li><strong>1:50pm - 2:00pm</strong> Pick Up</li>
+                <li><strong>2:15pm - 3:00pm</strong> Free Time</li>
+                <li><strong>3:30pm - 4:45pm</strong> Homework, Reading, Math, Writing</li>
+                <li><strong>4:45pm - 5:15pm</strong> Break Time</li>
+                <li><strong>5:15pm - 6:00pm</strong> Activities, Stories</li>
+                <li><strong>6:00pm - 6:30pm</strong> Free Time</li>
+            </ul>
+        </div>
     </div>
-    <div>
+    <div id="summer-school-container">
         <h2 class="schedule-title">1st - 8th Graders</h2>
         <ul>
             <li><strong>3:00pm - 3:30pm</strong> Pick Up</li>
