Move navi items to right of screen Moved clickable links to right side of screen while keeping the logo on the left side. Removed color change on hover. Added small border to bottom of navigation bar.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,28 @@
 <body>
     <!-- navigation bar -->
     <div class="topnav container">
-        <div class="topnav item"><img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="logo"></div>
-        <div class="topnav item"><a href="index.html">Home</a></div>
-        <div class="topnav item"><a href="about-us.html">About Us</a></div>
-        <div class="topnav item"><a href="schedule.html">Schedule</a></div>
-        <div class="topnav item"><a href="gallery.html">Gallery</a></div>
+        <ul>
+            <li class="logo">
+                <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
+            </li>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="about-us.html">About Us</a>
+            </li>
+            <li>
+                <a href="schedule.html">Schedule</a>
+            </li>
+            <li>
+                <a href="gallery.html">Gallery</a>
+            </li>
+        </ul>
     </div>
-    
+
     <div class="banner container">
-        <img src="./img/tuy-classtime-candid-4.png" alt="Photo of teacher teaching kids. Credit to TUY Academy"
-            class="banner image">
+        <img src="./img/tuy-freetime-benchphoto.png" alt="Photo of three kids smiling on a bench. Credit to TUY Academy"
+            class="banner">
     </div>
     <div class="title container">
         <h1 class="title">TUY Academy</h1>
