--- a/schedule.html
+++ b/schedule.html
@@ -21,6 +21,11 @@
 
     <div class="schedule-container">
         <div id="after-school-container">
+            <!-- page banner for after school -->
+            <div class="banner container">
+                <img src="./img/tuy-classtime-candid-3.png" alt="Photo of teacher and kids in classroom. Credit to TUY Academy"
+                    class="banner image">
+            </div>
             <h1>After School Daily Schedule</h1>
             <div>
                 <h2 class="schedule-title">Kindergarten</h2>
@@ -44,6 +49,11 @@
             </div>
         </div>
         <div id="summer-school-container">
+            <!-- page banner for summer school -->
+            <div class="banner container">
+                <img src="./img/tuy-activities-tug_of_war.png" alt="Photo of group of kids playing tug of war. Credit to TUY Academy"
+                    class="banner image">
+            </div>
             <h1>Summer School Daily Schedule</h1>
             <h2 class="schedule-title">Kindergarten</h2>
             <ul>
