--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/tuy_global.css">
     <link rel="stylesheet" href="css/tuy_about-us.css">
 </head>
+
 <body>
     <!-- navigation bar -->
     <div class="topnav container">
@@ -16,6 +18,13 @@
         <div class="topnav item"><a href="schedule.html">Schedule</a></div>
         <div class="topnav item"><a href="gallery.html">Gallery</a></div>
     </div>
-    
+
+    <!-- page banner -->
+    <div class="banner container">
+        <img src="./img/tuy-classtime-candid-4.png" alt="Photo of teacher and kids in classroom. Credit to TUY Academy"
+            class="banner image">
+    </div>
+
 </body>
+
 </html>
