--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="services container">
         <h3 id="service-header">Our Services</h3>
-        <ul>
+        <ul class="service-list">
             <li>School Pick Up</li>
             <li>Classes divided by grades K-8</li>
             <li>Tutoring and Homework Helpers</li>
