--- a/gallery.html
+++ b/gallery.html
@@ -12,11 +12,23 @@
 <body>
     <!-- navigation bar -->
     <div class="topnav container">
-        <div class="topnav item"><img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="logo"></div>
-        <div class="topnav item"><a href="index.html">Home</a></div>
-        <div class="topnav item"><a href="about-us.html">About Us</a></div>
-        <div class="topnav item"><a href="schedule.html">Schedule</a></div>
-        <div class="topnav item"><a href="gallery.html">Gallery</a></div>
+        <ul>
+            <li class="logo">
+                <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
+            </li>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="about-us.html">About Us</a>
+            </li>
+            <li>
+                <a href="schedule.html">Schedule</a>
+            </li>
+            <li>
+                <a href="gallery.html">Gallery</a>
+            </li>
+        </ul>
     </div>
 </body>
 
