--- a/schedule.html
+++ b/schedule.html
@@ -12,11 +12,23 @@
 <body>
     <!-- navigation bar -->
     <div class="topnav container">
-        <div class="topnav item"><img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="logo"></div>
-        <div class="topnav item"><a href="index.html">Home</a></div>
-        <div class="topnav item"><a href="about-us.html">About Us</a></div>
-        <div class="topnav item"><a href="schedule.html">Schedule</a></div>
-        <div class="topnav item"><a href="gallery.html">Gallery</a></div>
+        <ul>
+            <li class="logo">
+                <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
+            </li>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="about-us.html">About Us</a>
+            </li>
+            <li>
+                <a href="schedule.html">Schedule</a>
+            </li>
+            <li>
+                <a href="gallery.html">Gallery</a>
+            </li>
+        </ul>
     </div>
 
     <div class="schedule-container">
@@ -28,8 +40,8 @@
             </div>
             <h1>After School Daily Schedule</h1>
             <div>
-                <h2 class="schedule-title">Kindergarten</h2>
-                <ul>
+                <h2 class="title">Kindergarten</h2>
+                <ul class="schedule">
                     <li><strong>1:50pm - 2:00pm</strong> Pick Up</li>
                     <li><strong>2:15pm - 3:00pm</strong> Free Time</li>
                     <li><strong>3:30pm - 4:45pm</strong> Homework, Reading, Math, Writing</li>
@@ -37,8 +49,8 @@
                     <li><strong>5:15pm - 6:00pm</strong> Activities, Stories</li>
                     <li><strong>6:00pm - 6:30pm</strong> Free Time</li>
                 </ul>
-                <h2 class="schedule-title">1st - 8th Graders</h2>
-                <ul>
+                <h2 class="itle">1st - 8th Graders</h2>
+                <ul class="schedule">
                     <li><strong>3:00pm - 3:30pm</strong> Pick Up</li>
                     <li><strong>3:30pm - 3:40pm</strong> Snacks</li>
                     <li><strong>3:40pm - 5:00pm</strong> Homework, TUY Packet, Journaling</li>
