Add service list and director info with start of gallery

--- a/about-us.html
+++ b/about-us.html
@@ -37,6 +37,28 @@
             class="banner">
     </div>
 
+    <div class="services">
+        <h2 class="list-title">Our Services</h2>
+        <ul class="list">
+            <li>Pick up from school</li>
+            <li>Open until 6:30 PM</li>
+            <li>Classes divided by grade (K-8)</li>
+            <li>Homework helpers</li>
+            <li>Large grass field and playground for outdoor fun and sports</li>
+            <li>Summer schooling</li>
+        </ul>
+    </div>
+    <div class="contact-info">
+        <h2 class="list-title">Contact Information</h2>
+        <ul class="list">
+            <li>Current K-2 teacher at Victor Elementary School in Torrance</li>
+            <li>B.A. in Elementary Education from University of Southern California</li>
+            <li>M.A. from Arkansas State University</li>
+            <li>Credentials from California State University Northridge</li>
+        </ul>
+        <img src="./img/contact-image.png" alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School">
+    </div>
+
 </body>
 
 </html>
