--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,41 @@
             </li>
         </ul>
     </div>
+
+    <div class="gallery-container">
+        <!-- Imgs of arts and crafts -->
+        <img src="./img/tuy-activities-artsandcrafts.png">
+        <img src="./img/tuy-activities-halloween_arts_and_crafts-2.png">
+        <img src="./img/tuy-activities-halloween_arts_and_crafts.png">
+
+        <!-- Imgs of jumper-related activities -->
+        <img src="./img/tuy-activities-jumper-candid.png">
+        <img src="./img/tuy-activities-jumper.png">
+        <img src="./img/tuy-activities-jumper_gym.png">
+
+        <!-- Imgs of banquet activity -->
+        <img src="./img/tuy-activities-banquet-candid.png">
+        <img src="./img/tuy-activities-banquet-group.png">
+
+        <!-- Imgs of bowling -->
+        <img src="./img/tuy-activities-bowling-selfie-1.png">
+
+        <!-- Imgs of carnival day -->
+        <img src="./img/tuy-activities-carnival-candid.png">
+        <img src="./img/tuy-activities-carnival.png">
+
+        <!-- Imgs of outdoor activities -->
+        <img src="./img/tuy-activities-coupe.png">
+        <img src="./img/tuy-activities-challengeday.png">
+
+        <!-- Imgs of playground -->
+        <img src="./img/tuy-activities-playground-jungle_gym.png">
+    
+        <!-- Imgs of raging water day -->
+
+
+        <!-- Imgs of water-related activities -->
+    </div>
 </body>
 
 </html>
