--- a/index.html
+++ b/index.html
@@ -39,17 +39,12 @@
         <h1 class="title">TUY Academy</h1>
     </div>
     <div class="summary container">
-        <p class="summary paragraph">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-            turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu
-            libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    </div>
-    <div class="services container">
-        <h3 id="service-header">Our Services</h3>
-        <ul class="service-list">
-            <li>School Pick Up</li>
-            <li>Classes divided by grades K-8</li>
-            <li>Tutoring and Homework Helpers</li>
-        </ul>
+        <p class="summary paragraph">
+            TUY was established in 1994, offering services from school pickups to after-school tutoring to help students
+            with their homework, reading, writing, and math enrichment in a small-group setting. Our qualified and
+            caring tutors are dedicated to give students the time and attention needed to nurture their unique style and
+            accomplish their learning goals.
+        </p>
     </div>
 </body>
 
