Add container for social media and links to TUY accounts

--- a/about-us.html
+++ b/about-us.html
@@ -49,7 +49,7 @@
         </ul>
     </div>
     <div class="contact-info">
-        <h2 class="list-title">Contact Information</h2>
+        <h2 class="list-title">About the Director</h2>
         <ul class="list">
             <li>Current K-2 teacher at Victor Elementary School in Torrance</li>
             <li>B.A. in Elementary Education from University of Southern California</li>
