--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
             accomplish their learning goals.
         </p>
     </div>
+
+    <!-- Social media information -->
+    <div class="social-media-container">
+        <h2 class="title">Follow us!</h2>
+        <div id="social-media-links">
+            <a href="https://www.instagram.com/tuy_academy/?hl=en">@tuy_academy</a>
+            <a href="https://www.facebook.com/people/TUY-Academy/100064850191571/">TUY Academy</a>
+        </div>
+    </div>
 </body>
 
 </html>
