--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <h2 class="title">Follow us!</h2>
         <div id="social-media-links">
             <a href="https://www.instagram.com/tuy_academy/?hl=en">@tuy_academy</a>
+            <img src="./img/social-media-logos/instagram-logo.png" class="social-media-logo">
             <a href="https://www.facebook.com/people/TUY-Academy/100064850191571/">TUY Academy</a>
+            <img src="./img/social-media-logos/facebook-logo.png" class="social-media-logo">
         </div>
     </div>
 </body>
