Format social media links and add background color to divs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="banner container">
         <img src="./img/tuy-freetime-benchphoto.png" alt="Photo of three kids smiling on a bench. Credit to TUY Academy"
-            class="banner">
+            class="banner-image">
     </div>
     <div class="title container">
         <h1 class="title">TUY Academy</h1>
@@ -49,7 +49,7 @@
 
     <!-- Social media information -->
     <div class="social-media-container">
-        <h2 class="title">Follow us!</h2>
+        <h2 class="social-media title">Follow us!</h2>
         <div id="social-media-links">
             <div id="instagram">
                 <img src="./img/social-media-logos/instagram-logo.png" class="social-media-logo">
