Finalize look on social media section and updated header section

--- a/index.html
+++ b/index.html
@@ -31,34 +31,46 @@
         </ul>
     </div>
 
-    <div class="banner container">
-        <img src="./img/tuy-freetime-benchphoto.png" alt="Photo of three kids smiling on a bench. Credit to TUY Academy"
-            class="banner-image">
+    <div class="banner-section">
+        <div class="banner container">
+            <div class="title container">
+                <h1 class="title">TUY Academy</h1>
+                <div class="summary container">
+                    <p class="summary paragraph">
+                        TUY was established in 1994, offering services from school pickups to after-school tutoring to
+                        help
+                        students
+                        with their homework, reading, writing, and math enrichment in a small-group setting. Our
+                        qualified
+                        and
+                        caring tutors are dedicated to give students the time and attention needed to nurture their
+                        unique
+                        style and
+                        accomplish their learning goals.
+                    </p>
+                </div>
+            </div>
+            <img src="./img/tuy-freetime-benchphoto.png"
+                alt="Photo of three kids smiling on a bench. Credit to TUY Academy" class="banner-image">
+        </div>
     </div>
-    <div class="title container">
-        <h1 class="title">TUY Academy</h1>
-    </div>
-    <div class="summary container">
-        <p class="summary paragraph">
-            TUY was established in 1994, offering services from school pickups to after-school tutoring to help students
-            with their homework, reading, writing, and math enrichment in a small-group setting. Our qualified and
-            caring tutors are dedicated to give students the time and attention needed to nurture their unique style and
-            accomplish their learning goals.
-        </p>
-    </div>
+
+
 
     <!-- Social media information -->
-    <div class="social-media-container">
-        <h2 class="social-media title">Follow us!</h2>
-        <div id="social-media-links">
-            <div id="instagram">
-                <img src="./img/social-media-logos/instagram-logo.png" class="social-media-logo">
-                <a href="https://www.instagram.com/tuy_academy/?hl=en">@tuy_academy</a>
-            </div>
+    <div class="social-media-section">
+        <div class="social-media-container">
+            <h2 class="social-media title">Follow us!</h2>
+            <div id="social-media-links">
+                <div id="instagram">
+                    <img src="./img/social-media-logos/instagram-logo.png" class="social-media-logo">
+                    <a href="https://www.instagram.com/tuy_academy/?hl=en">@tuy_academy</a>
+                </div>
 
-            <div id="facebook">
-                <img src="./img/social-media-logos/facebook-logo.png" class="social-media-logo">
-                <a href="https://www.facebook.com/people/TUY-Academy/100064850191571/">TUY Academy</a>
+                <div id="facebook">
+                    <img src="./img/social-media-logos/facebook-logo.png" class="social-media-logo">
+                    <a href="https://www.facebook.com/people/TUY-Academy/100064850191571/">TUY Academy</a>
+                </div>
             </div>
         </div>
     </div>
