Add style and format to header of about-us

--- a/about-us.html
+++ b/about-us.html
@@ -32,23 +32,31 @@
     </div>
 
     <!-- page banner -->
-    <div class="banner container">
-        <img src="./img/tuy-classtime-candid-4.png" alt="Photo of teacher and kids in classroom. Credit to TUY Academy"
-            class="banner">
+    <div class="header-container">
+        <div class="services">
+            <h2 class="list-title">Our Services</h2>
+            <ul class="list">
+                <li>Pick up from school</li>
+                <li>Open until 6:30 PM</li>
+                <li>Classes divided by grade (K-8)</li>
+                <li>Homework helpers</li>
+                <li>Large grass field and playground for outdoor fun and sports</li>
+                <li>Summer schooling</li>
+            </ul>
+        </div>
+        <div class="banner container">
+            <img src="./img/tuy-classtime-candid-4.png"
+                alt="Photo of teacher and kids in classroom. Credit to TUY Academy" class="banner">
+        </div>
     </div>
 
-    <div class="services">
-        <h2 class="list-title">Our Services</h2>
-        <ul class="list">
-            <li>Pick up from school</li>
-            <li>Open until 6:30 PM</li>
-            <li>Classes divided by grade (K-8)</li>
-            <li>Homework helpers</li>
-            <li>Large grass field and playground for outdoor fun and sports</li>
-            <li>Summer schooling</li>
-        </ul>
+    <div class="summer-container">
+
+        
+
     </div>
-    <div class="contact-info">
+
+    <div class="contact-info-container">
         <h2 class="list-title">About the Director</h2>
         <ul class="list">
             <li>Current K-2 teacher at Victor Elementary School in Torrance</li>
@@ -56,7 +64,8 @@
             <li>M.A. from Arkansas State University</li>
             <li>Credentials from California State University Northridge</li>
         </ul>
-        <img src="./img/contact-image.png" alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School">
+        <img src="./img/contact-image.png"
+            alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School">
     </div>
 
 </body>
