Add summer school section to about-us

--- a/about-us.html
+++ b/about-us.html
@@ -52,7 +52,9 @@
 
     <div class="summer-container">
 
-        
+        <img src="./img/tuy-activities-carnival-candid.png" alt="Image of candid TUY Carnival Day">
+        <h2 class="list-title">TUY Summer School Program</h2>
+        <ul class="list"></ul>
 
     </div>
 
