--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
     <!-- page banner -->
     <div class="header-container">
         <div class="services">
-            <h2 class="list-title">Our Services</h2>
+            <h2 class="list-title header">Our Services</h2>
             <ul class="list">
                 <li>Pick up from school</li>
                 <li>Open until 6:30 PM</li>
@@ -53,19 +53,36 @@
     <div class="summer-container">
 
         <img src="./img/tuy-activities-carnival-candid.png" alt="Image of candid TUY Carnival Day">
-        <h2 class="list-title">TUY Summer School Program</h2>
-        <ul class="list"></ul>
-
+        <div class="services">
+            <h2 class="list-title">TUY Summer School Program</h2>
+            <h3 class="list-subtitle">Field Trips</h3>
+            <ul class="list">
+                <li>Seaside Lagoon</li>
+                <li>Ice Skating</li>
+                <li>Raging Waters</li>
+            </ul>
+            <h3 class="list-subtitle">Activities</h3>
+            <ul class="list">
+                <li>Sports</li>
+                <li>Carnivals</li>
+                <li>Treasure Hunts</li>
+                <li>Arts and Crafts</li>
+                <li>Cooking and Baking</li>
+                <li>Water Day</li>
+            </ul>
+        </div>
     </div>
 
     <div class="contact-info-container">
-        <h2 class="list-title">About the Director</h2>
-        <ul class="list">
-            <li>Current K-2 teacher at Victor Elementary School in Torrance</li>
-            <li>B.A. in Elementary Education from University of Southern California</li>
-            <li>M.A. from Arkansas State University</li>
-            <li>Credentials from California State University Northridge</li>
-        </ul>
+        <div class="services">
+            <h2 class="list-title">About the Director</h2>
+            <ul class="list">
+                <li>Current K-2 teacher at Victor Elementary School in Torrance</li>
+                <li>B.A. in Elementary Education from University of Southern California</li>
+                <li>M.A. from Arkansas State University</li>
+                <li>Credentials from California State University Northridge</li>
+            </ul>
+        </div>
         <img src="./img/contact-image.png"
             alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School">
     </div>
