Style and format owner section

--- a/about-us.html
+++ b/about-us.html
@@ -84,7 +84,7 @@
             </ul>
         </div>
         <img src="./img/contact-image.png"
-            alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School">
+            alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School" id="owner-image">
     </div>
 
 </body>
