Style and format schedule page

--- a/schedule.html
+++ b/schedule.html
@@ -31,61 +31,62 @@
         </ul>
     </div>
 
-    <div class="schedule-container">
-        <div id="after-school-container">
-            <!-- page banner for after school -->
-            <div class="banner container">
-                <img src="./img/tuy-classtime-candid-3.png" alt="Photo of teacher and kids in classroom. Credit to TUY Academy"
-                    class="banner image">
-            </div>
-            <h1>After School Daily Schedule</h1>
-            <div>
-                <h2 class="title">Kindergarten</h2>
-                <ul class="schedule">
-                    <li><strong>1:50pm - 2:00pm</strong> Pick Up</li>
-                    <li><strong>2:15pm - 3:00pm</strong> Free Time</li>
-                    <li><strong>3:30pm - 4:45pm</strong> Homework, Reading, Math, Writing</li>
-                    <li><strong>4:45pm - 5:15pm</strong> Break Time</li>
-                    <li><strong>5:15pm - 6:00pm</strong> Activities, Stories</li>
-                    <li><strong>6:00pm - 6:30pm</strong> Free Time</li>
-                </ul>
-                <h2 class="itle">1st - 8th Graders</h2>
-                <ul class="schedule">
-                    <li><strong>3:00pm - 3:30pm</strong> Pick Up</li>
-                    <li><strong>3:30pm - 3:40pm</strong> Snacks</li>
-                    <li><strong>3:40pm - 5:00pm</strong> Homework, TUY Packet, Journaling</li>
-                    <li><strong>5:00pm - 5:15pm</strong> Break Time</li>
-                    <li><strong>5:15pm - 6:00pm</strong> Reading, Writing, Math</li>
-                    <li><strong>6:00pm - 6:30pm</strong> Free Time</li>
-                </ul>
-            </div>
-        </div>
-        <div id="summer-school-container">
-            <!-- page banner for summer school -->
-            <div class="banner container">
-                <img src="./img/tuy-activities-tug_of_war.png" alt="Photo of group of kids playing tug of war. Credit to TUY Academy"
-                    class="banner image">
-            </div>
-            <h1>Summer School Daily Schedule</h1>
+
+    <div id="after-school-container">
+        <!-- page banner for after school -->
+
+        <h1 class="container-title">After School Daily Schedule</h1>
+        <div class="schedule">
             <h2 class="schedule-title">Kindergarten</h2>
             <ul>
-                <li><strong>1:50pm - 2:00pm</strong> Pick Up</li>
-                <li><strong>2:15pm - 3:00pm</strong> Free Time</li>
-                <li><strong>3:30pm - 4:45pm</strong> Homework, Reading, Math, Writing</li>
-                <li><strong>4:45pm - 5:15pm</strong> Break Time</li>
-                <li><strong>5:15pm - 6:00pm</strong> Activities, Stories</li>
-                <li><strong>6:00pm - 6:30pm</strong> Free Time</li>
+                <li>1:50pm - 2:00pm Pick Up</li>
+                <li>2:15pm - 3:00pm Free Time</li>
+                <li>3:30pm - 4:45pm Homework, Reading, Math, Writing</li>
+                <li>4:45pm - 5:15pm Break Time</li>
+                <li>5:15pm - 6:00pm Activities, Stories</li>
+                <li>6:00pm - 6:30pm Free Time</li>
             </ul>
             <h2 class="schedule-title">1st - 8th Graders</h2>
             <ul>
-                <li><strong>1:50pm - 2:00pm</strong> Pick Up</li>
-                <li><strong>2:15pm - 3:00pm</strong> Free Time</li>
-                <li><strong>3:30pm - 4:45pm</strong> Homework, Reading, Math, Writing</li>
-                <li><strong>4:45pm - 5:15pm</strong> Break Time</li>
-                <li><strong>5:15pm - 6:00pm</strong> Activities, Stories</li>
-                <li><strong>6:00pm - 6:30pm</strong> Free Time</li>
+                <li>3:00pm - 3:30pm Pick Up</li>
+                <li>3:30pm - 3:40pm Snacks</li>
+                <li>3:40pm - 5:00pm Homework, TUY Packet, Journaling</li>
+                <li>5:00pm - 5:15pm Break Time</li>
+                <li>5:15pm - 6:00pm Reading, Writing, Math</li>
+                <li>6:00pm - 6:30pm Free Time</li>
             </ul>
         </div>
+        <img src="./img/tuy-classtime-candid-3.png" alt="Photo of teacher and kids in classroom. Credit to TUY Academy">
+    </div>
+
+
+    <div id="summer-school-container">
+        <!-- page banner for summer school -->
+        <img src="./img/tuy-activities-tug_of_war.png"
+            alt="Photo of group of kids playing tug of war. Credit to TUY Academy">
+
+        <div class="schedule">
+            <h2 class="schedule-title">Kindergarten</h2>
+            <ul>
+                <li>1:50pm - 2:00pm Pick Up</li>
+                <li>2:15pm - 3:00pm Free Time</li>
+                <li>3:30pm - 4:45pm Homework, Reading, Math, Writing</li>
+                <li>4:45pm - 5:15pm Break Time</li>
+                <li>5:15pm - 6:00pm Activities, Stories</li>
+                <li>6:00pm - 6:30pm Free Time</li>
+            </ul>
+
+            <h2 class="schedule-title">1st - 8th Graders</h2>
+            <ul>
+                <li>1:50pm - 2:00pm Pick Up</li>
+                <li>2:15pm - 3:00pm Free Time</li>
+                <li>3:30pm - 4:45pm Homework, Reading, Math, Writing</li>
+                <li>4:45pm - 5:15pm Break Time</li>
+                <li>5:15pm - 6:00pm Activities, Stories</li>
+                <li>6:00pm - 6:30pm Free Time</li>
+            </ul>
+        </div>
+        <h1 class="container-title">Summer School Daily Schedule</h1>
     </div>
 </body>
 
