Revamp positioning of all pages

--- a/gallery.html
+++ b/gallery.html
@@ -12,10 +12,8 @@
 <body>
     <!-- navigation bar -->
     <div class="topnav container">
+        <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
         <ul>
-            <li class="logo">
-                <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
-            </li>
             <li>
                 <a href="index.html">Home</a>
             </li>
@@ -32,38 +30,23 @@
     </div>
 
     <div class="gallery-container">
-        <!-- Imgs of arts and crafts -->
-        <img src="./img/tuy-activities-artsandcrafts.png">
-        <img src="./img/tuy-activities-halloween_arts_and_crafts-2.png">
-        <img src="./img/tuy-activities-halloween_arts_and_crafts.png">
+        <div class="image-gallery jumpers">
+            <!-- Imgs of rented jumpers activities -->
+            <img src="./img/tuy-activities-jumper-candid.png">
+            <img src="./img/tuy-activities-jumper.png">
+        </div>
 
-        <!-- Imgs of jumper-related activities -->
-        <img src="./img/tuy-activities-jumper-candid.png">
-        <img src="./img/tuy-activities-jumper.png">
-        <img src="./img/tuy-activities-jumper_gym.png">
+        <div class="image-gallery jumper-gym">
+            <!-- Img of jumper gym -->
+            <img src="./img/tuy-activities-jumper_gym.png">
+        </div>
 
-        <!-- Imgs of banquet activity -->
-        <img src="./img/tuy-activities-banquet-candid.png">
-        <img src="./img/tuy-activities-banquet-group.png">
+        <div class="image-gallery carnival">
+            <!-- Imgs of carnival day -->
+            <img src="./img/tuy-activities-carnival-candid.png">
+            <img src="./img/tuy-activities-carnival.png">
+        </div>
 
-        <!-- Imgs of bowling -->
-        <img src="./img/tuy-activities-bowling-selfie-1.png">
-
-        <!-- Imgs of carnival day -->
-        <img src="./img/tuy-activities-carnival-candid.png">
-        <img src="./img/tuy-activities-carnival.png">
-
-        <!-- Imgs of outdoor activities -->
-        <img src="./img/tuy-activities-coupe.png">
-        <img src="./img/tuy-activities-challengeday.png">
-
-        <!-- Imgs of playground -->
-        <img src="./img/tuy-activities-playground-jungle_gym.png">
-    
-        <!-- Imgs of raging water day -->
-
-
-        <!-- Imgs of water-related activities -->
     </div>
 </body>
 
