--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
 
 <body>
+
     <!-- navigation bar -->
     <div class="topnav container">
+        <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
         <ul>
-            <li class="logo">
-                <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
-            </li>
             <li>
                 <a href="index.html">Home</a>
             </li>
@@ -30,14 +29,14 @@
             </li>
         </ul>
     </div>
-
     <div class="banner-section">
         <div class="banner container">
             <div class="title container">
                 <h1 class="title">TUY Academy</h1>
                 <div class="summary container">
                     <p class="summary paragraph">
-                        TUY was established in 1994, offering services from school pickups to after-school tutoring to
+                        TUY was established in 1994, offering services from school pickups to after-school tutoring
+                        to
                         help
                         students
                         with their homework, reading, writing, and math enrichment in a small-group setting. Our
@@ -74,6 +73,24 @@
             </div>
         </div>
     </div>
+
+    <!-- Contact information for mom -->
+    <div class="footer">
+
+        <div class="footer-container">
+            <div id="phone-container">
+                <h3 class="phone-number">Call or Text</h3>
+                <h3 class="phone-number">310-465-9225</h3>
+            </div>
+
+            <div id="email-container">
+                <h3 class="email-address">Email</h3>
+                <h3 class="email-address">eyc2869@gmail.com</h3>
+            </div>
+        </div>
+
+    </div>
 </body>
+
 
 </html>
