--- a/gallery.html
+++ b/gallery.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TUY Academy</title>
-    <link rel="stylesheet" href="css/tuy_global.css">
-    <link rel="stylesheet" href="css/tuy_gallery.css">
+    <link rel="stylesheet" type="text/css" href="css/tuy_global.css">
+    <link rel="stylesheet" type="text/css" href="css/tuy_gallery.css">
 </head>
 
 <body>
