--- a/gallery.html
+++ b/gallery.html
@@ -11,23 +11,24 @@
 
 <body>
     <!-- navigation bar -->
-    <div class="topnav container">
-        <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li>
-                <a href="schedule.html">Schedule</a>
-            </li>
-            <li>
-                <a href="gallery.html">Gallery</a>
-            </li>
-        </ul>
-    </div>
+
+    <nav class="navbar">
+            <div>LOGO</div>>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about-us.html">About Us</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+            </ul>
+    </nav>
 
     <div class="gallery-container">
         <div class="image-gallery jumpers">
