--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
     <!-- navigation bar -->
-    <div class="topnav container">
-        <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
-        <ul>
+    <nav class="navbar">
+        <div>TUY Academy</div>
+        <ul class="nav-list">
             <li>
                 <a href="index.html">Home</a>
             </li>
@@ -28,7 +28,8 @@
                 <a href="gallery.html">Gallery</a>
             </li>
         </ul>
-    </div>
+    </nav>
+
     <div class="banner-section">
         <div class="banner container">
             <div class="title container">
