Refactor new navi-bar

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 
     <!-- navigation bar -->
     <nav class="navbar">
-        <div>TUY Academy</div>
+        <div>
+            <img class="navbar-logo" src="./media/images/TUY_logo.jpg"/>
+        </div>
         <ul class="nav-list">
-            <li>
+            <li class="list-item">
                 <a href="index.html">Home</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="about-us.html">About Us</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="schedule.html">Schedule</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="gallery.html">Gallery</a>
             </li>
         </ul>
