Finishing touches on logos and images

--- a/index.html
+++ b/index.html
@@ -32,23 +32,14 @@
         </ul>
     </nav>
 
+    
     <div class="banner-section">
         <div class="banner container">
             <div class="title container">
                 <h1 class="title">TUY Academy</h1>
                 <div class="summary container">
                     <p class="summary paragraph">
-                        TUY was established in 1994, offering services from school pickups to after-school tutoring
-                        to
-                        help
-                        students
-                        with their homework, reading, writing, and math enrichment in a small-group setting. Our
-                        qualified
-                        and
-                        caring tutors are dedicated to give students the time and attention needed to nurture their
-                        unique
-                        style and
-                        accomplish their learning goals.
+                        TUY was established in 1994, offering services from school pickups to after-school tutoring to help students with their homework, reading, writing, and math enrichment in a small-group setting. Our qualified and caring tutors are dedicated to give students the time and attention needed to nurture their unique style and accomplish their learning goals.
                     </p>
                 </div>
             </div>
