--- a/about-us.html
+++ b/about-us.html
@@ -11,23 +11,25 @@
 
 <body>
     <!-- navigation bar -->
-    <div class="topnav container">
-        <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
-        <ul>
-            <li>
+    <nav class="navbar">
+        <div>
+            <img class="navbar-logo" src="./media/images/TUY_logo.jpg"/>
+        </div>
+        <ul class="nav-list">
+            <li class="list-item">
                 <a href="index.html">Home</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="about-us.html">About Us</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="schedule.html">Schedule</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="gallery.html">Gallery</a>
             </li>
         </ul>
-    </div>
+    </nav>
 
     <!-- page banner -->
     <div class="header-container">
