--- a/gallery.html
+++ b/gallery.html
@@ -11,23 +11,24 @@
 
 <body>
     <!-- navigation bar -->
-
     <nav class="navbar">
-            <div>LOGO</div>>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="about-us.html">About Us</a>
-                </li>
-                <li>
-                    <a href="schedule.html">Schedule</a>
-                </li>
-                <li>
-                    <a href="gallery.html">Gallery</a>
-                </li>
-            </ul>
+        <div>
+            <img class="navbar-logo" src="./media/images/TUY_logo.jpg"/>
+        </div>
+        <ul class="nav-list">
+            <li class="list-item">
+                <a href="index.html">Home</a>
+            </li>
+            <li class="list-item">
+                <a href="about-us.html">About Us</a>
+            </li>
+            <li class="list-item">
+                <a href="schedule.html">Schedule</a>
+            </li>
+            <li class="list-item">
+                <a href="gallery.html">Gallery</a>
+            </li>
+        </ul>
     </nav>
 
     <div class="gallery-container">
