Add responsive viewing on about us page

--- a/about-us.html
+++ b/about-us.html
@@ -45,14 +45,14 @@
             </ul>
         </div>
         <div class="banner container">
-            <img src="./img/tuy-classtime-candid-4.png"
+            <img class="banner-image" src="./img/tuy-classtime-candid-4.png"
                 alt="Photo of teacher and kids in classroom. Credit to TUY Academy" class="banner">
         </div>
     </div>
 
     <div class="summer-container">
 
-        <img src="./img/tuy-activities-carnival-candid.png" alt="Image of candid TUY Carnival Day">
+        <img class="banner-image" src="./img/tuy-activities-carnival-candid.png" alt="Image of candid TUY Carnival Day">
         <div class="services">
             <h2 class="list-title">TUY Summer School Program</h2>
             <h3 class="list-subtitle">Field Trips</h3>
@@ -83,8 +83,8 @@
                 <li>Credentials from California State University Northridge</li>
             </ul>
         </div>
-        <img src="./img/contact-image.png"
-            alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School" id="owner-image">
+        <img class="banner-image" src="./img/contact-image.png"
+            alt="A photo of the owner of TUY Academy. Courtesy to Victor Elementary School"/>
     </div>
 
 </body>
