Add responsive images on schedule page

--- a/schedule.html
+++ b/schedule.html
@@ -11,23 +11,25 @@
 
 <body>
     <!-- navigation bar -->
-    <div class="topnav container">
-        <img src="./media/images/TUY_logo.jpg" alt="Logo of TUY Academy" class="image">
-        <ul>
-            <li>
+    <nav class="navbar">
+        <div>
+            <img class="navbar-logo" src="./media/images/TUY_logo.jpg"/>
+        </div>
+        <ul class="nav-list">
+            <li class="list-item">
                 <a href="index.html">Home</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="about-us.html">About Us</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="schedule.html">Schedule</a>
             </li>
-            <li>
+            <li class="list-item">
                 <a href="gallery.html">Gallery</a>
             </li>
         </ul>
-    </div>
+    </nav>
 
 
     <div id="after-school-container">
@@ -54,13 +56,13 @@
                 <li>6:00pm - 6:30pm Free Time</li>
             </ul>
         </div>
-        <img src="./img/tuy-classtime-candid-3.png" alt="Photo of teacher and kids in classroom. Credit to TUY Academy">
+        <img class="schedule-image" src="./img/tuy-classtime-candid-3.png" alt="Photo of teacher and kids in classroom. Credit to TUY Academy">
     </div>
 
 
     <div id="summer-school-container">
         <!-- page banner for summer school -->
-        <img src="./img/tuy-activities-tug_of_war.png"
+        <img class="schedule-image" src="./img/tuy-activities-tug_of_war.png"
             alt="Photo of group of kids playing tug of war. Credit to TUY Academy">
 
         <div class="schedule">
