--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- navigation bar -->
     <nav class="navbar">
         <div>
-            <img class="navbar-logo" src="./media/images/TUY_logo.jpg"/>
+            <img class="navbar-logo" src="./media/images/TUY_logo.jpg" />
         </div>
         <ul class="nav-list">
             <li class="list-item">
@@ -32,14 +32,17 @@
         </ul>
     </nav>
 
-    
+
     <div class="banner-section">
         <div class="banner container">
             <div class="title container">
                 <h1 class="title">TUY Academy</h1>
                 <div class="summary container">
                     <p class="summary paragraph">
-                        TUY was established in 1994, offering services from school pickups to after-school tutoring to help students with their homework, reading, writing, and math enrichment in a small-group setting. Our qualified and caring tutors are dedicated to give students the time and attention needed to nurture their unique style and accomplish their learning goals.
+                        TUY was established in 1994, offering services from school pickups to after-school tutoring to
+                        help students with their homework, reading, writing, and math enrichment in a small-group
+                        setting. Our qualified and caring tutors are dedicated to give students the time and attention
+                        needed to nurture their unique style and accomplish their learning goals.
                     </p>
                 </div>
             </div>
@@ -69,8 +72,10 @@
     </div>
 
     <!-- Contact information for mom -->
+    <!-- TODO: Remove hardcoded padding and margin (or at least make it responsive)-->
+    <!-- TODO: Make fonts bigger. Can already tell it's too small on mobile devices -->
+    <!-- TODO: Make navi bar logo bigger. Can already tell it's too small on mobile devices -->
     <div class="footer">
-
         <div class="footer-container">
             <div id="phone-container">
                 <h3 class="phone-number">Call or Text</h3>
