Add TODO to schedule

--- a/schedule.html
+++ b/schedule.html
@@ -84,6 +84,9 @@
                 <li>6:00pm - 6:30pm Free Time</li>
             </ul>
         </div>
+
+        <!-- TODO: Update schedules using large time table rather than bulleted list -->
+
         <h1 class="container-title">Summer School Daily Schedule</h1>
     </div>
 </body>
