Update schedule for after school and summer school

--- a/schedule.html
+++ b/schedule.html
@@ -41,16 +41,15 @@
             <ul>
                 <li>1:50pm - 2:00pm Pick Up</li>
                 <li>2:15pm - 3:00pm Free Time</li>
-                <li>3:30pm - 4:45pm Homework, Reading, Math, Writing</li>
-                <li>4:45pm - 5:15pm Break Time</li>
-                <li>5:15pm - 6:00pm Activities, Stories</li>
+                <li>3:30pm - 4:45pm Homework & TUY Packets (Reading, Math, Writing)</li>
+                <li>4:45pm - 5:15pm Break Time - Playground</li>
+                <li>5:15pm - 6:00pm Journal, Activities, Stories</li>
                 <li>6:00pm - 6:30pm Free Time</li>
             </ul>
             <h2 class="schedule-title">1st - 8th Graders</h2>
             <ul>
                 <li>3:00pm - 3:30pm Pick Up</li>
-                <li>3:30pm - 3:40pm Snacks</li>
-                <li>3:40pm - 5:00pm Homework, TUY Packet, Journaling</li>
+                <li>3:40pm - 5:00pm Homework, TUY Packet, Journal</li>
                 <li>5:00pm - 5:15pm Break Time</li>
                 <li>5:15pm - 6:00pm Reading, Writing, Math</li>
                 <li>6:00pm - 6:30pm Free Time</li>
@@ -66,25 +65,17 @@
             alt="Photo of group of kids playing tug of war. Credit to TUY Academy">
 
         <div class="schedule">
-            <h2 class="schedule-title">Kindergarten</h2>
+            <h2 class="schedule-title">Kdg-8 Schedule</h2>
             <ul>
-                <li>1:50pm - 2:00pm Pick Up</li>
-                <li>2:15pm - 3:00pm Free Time</li>
-                <li>3:30pm - 4:45pm Homework, Reading, Math, Writing</li>
-                <li>4:45pm - 5:15pm Break Time</li>
-                <li>5:15pm - 6:00pm Activities, Stories</li>
-                <li>6:00pm - 6:30pm Free Time</li>
+                <li>8:00am Open</li>
+                <li>9:30am - 12:15pm Classes (Reading, Writing, Math)</li>
+                <li>12:15pm - 1:00pm Lunch (Provided)</li>
+                <li>1:00pm - 2:00pm Journal & Reading</li>
+                <li>2:00pm - 4:00pm Activities, Playground</li>
+                <li>4:00pm - 5:00pm Reading</li>
+                <li>5:00pm - 6:00pm Closing</li>
             </ul>
 
-            <h2 class="schedule-title">1st - 8th Graders</h2>
-            <ul>
-                <li>1:50pm - 2:00pm Pick Up</li>
-                <li>2:15pm - 3:00pm Free Time</li>
-                <li>3:30pm - 4:45pm Homework, Reading, Math, Writing</li>
-                <li>4:45pm - 5:15pm Break Time</li>
-                <li>5:15pm - 6:00pm Activities, Stories</li>
-                <li>6:00pm - 6:30pm Free Time</li>
-            </ul>
         </div>
 
         <!-- TODO: Update schedules using large time table rather than bulleted list -->
